--- a/tip/521.md
+++ b/tip/521.md
@@ -1,13 +1,16 @@
 # TIP 521: Floating Point Classification Functions
 	Author:		Kevin B. Kenny <kevin.b.kenny@gmail.com>
-	State:		Draft
+	State:		Accepted
 	Type:		Project
-	Vote:		In progress
+	Vote:		Done
 	Created:	21 October 2018
 	Post-History:
 	Tcl-Version:	8.7
 	Keywords:	Tcl, floating point, NaN, not a number
 	Tcl-Branch:     tip-521
+	Votes-For:      DKF, BG, KBK, JN, DGP, FV, AK
+	Votes-Against:  none
+	Votes-Present:  SL
 -----
 # Abstract
 
