--- a/tip/528.md
+++ b/tip/528.md
@@ -1,12 +1,15 @@
 # TIP 528: Deprecate Tk_Offset()
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        05-Dec-2018
 	Post-History:   
 	Tcl-Version:    8.7
 	Tk-Branch:     offsetof
+	Votes-For:      DKF, BG, KBK, JN, DGP, FV, SL, AK
+	Votes-Against:  none
+	Votes-Present:  none
 -----
 
 # Abstract
