--- a/tip/532.md
+++ b/tip/532.md
@@ -1,13 +1,16 @@
 # TIP 532: Re-implementation of event loop processing
 	Author:         Gregor Cramer <gcramer@sourceforge.net>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        09-Jan-2019
 	Post-History:  
 	Keywords:       Tk, bind, event, event loop
 	Tcl-Version:    8.6
 	Tk-Branch:      bug6e8afe516d
+	Votes-For:      DKF, BG, KBK, JN, FV, SL
+	Votes-Against:  none
+	Votes-Present:  DGP, AK
 ----
 
 # Abstract
