--- a/tip/536.md
+++ b/tip/536.md
@@ -1,13 +1,16 @@
 # TIP 536: Improvements to Mac-specific IPC in Tk
 	Author:         Kevin Walzer <kw@codebykevin.com>
-	State:          Draft
+	State:          Accepted
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        29-March-2019
 	Post-History:   
 	Keywords:       Tk
 	Tcl-Version:    8.6
 	Tk-Branch:      mac_services
+	Votes-For:      DKF, BG, JN, SL, AK
+	Votes-Against:  none
+	Votes-Present:  KBK, FV
 -----
 
 # Abstract
