--- a/tip/461.md
+++ b/tip/461.md
@@ -2,7 +2,7 @@
 	Author:         Kevin B Kenny <kennyb@acm.org>
 	Author:         Kevin B Kenny <kevin.b.kenny@gmail.com>
 	Author:         Kevin Kenny <kennykb@acm.org>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        24-Jan-2017
