--- a/tip/536.md
+++ b/tip/536.md
@@ -1,6 +1,6 @@
 # TIP 536: Improvements to Mac-specific IPC in Tk
 	Author:         Kevin Walzer <kw@codebykevin.com>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        29-March-2019
