TIP 521 now Final

--- a/tip/521.md
+++ b/tip/521.md
@@ -1,12 +1,12 @@
 # TIP 521: Floating Point Classification Functions
-	Author:		Kevin B. Kenny <kevin.b.kenny@gmail.com>
-	State:		Accepted
-	Type:		Project
-	Vote:		Done
-	Created:	21 October 2018
+	Author:         Kevin B. Kenny <kevin.b.kenny@gmail.com>
+	State:          Final
+	Type:           Project
+	Vote:           Done
+	Created:        21 October 2018
 	Post-History:
-	Tcl-Version:	8.7
-	Keywords:	Tcl, floating point, NaN, not a number
+	Tcl-Version:    8.7
+	Keywords:       Tcl, floating point, NaN, not a number
 	Tcl-Branch:     tip-521
 	Votes-For:      DKF, BG, KBK, JN, DGP, FV, AK
 	Votes-Against:  none
