Add "no error on small scale" aspect of the implementation.

--- a/tip/545.md
+++ b/tip/545.md
@@ -14,8 +14,9 @@
 Image photo SVG support was added to Tk by TIP 507.
 This TIP is about the options of SVG rendering:
 
-   *   The option "-unit" has no effect, as it sets the unit of the intermediate representation.
+   *   The option "-unit" is not helpful in an environment, where the only destination unit is pixel.
    *   The option "-scale float" is the essential tool to set rendering scaling. Nevertheless, to scale to a given height or width, a two-step procedure is required. This common case should be implemented by a one step procedure.
+   *   A valid image file scaled to a size below 0.5px or 0.5px does not lead to an error but to an image of 1x1 pixels. The aspect-ratio is not respected.
 
 # Rationale
 
@@ -23,7 +24,7 @@ This TIP included two components:
 
 ## Remove option "-unit"
 
-Remove the option "-unit", which has no effect.
+Remove the option "-unit".
 The given unit is used to set the unit of the intermediate set of polygons.
 
 The final unit will be pixels anyway, undependent on any intermediate unit.
@@ -43,6 +44,13 @@ The current solution to render a svg to a given height "$height" is:
 
 This two step procedure has a high performance impact, as the image is loaded twice.
 The aim is to render it only once by one parameter.
+
+## No error on to small scale
+
+It feels odd to throw an error on a valid image but on a to small -scale parameter resulting in a rounded size of width 0 or height 0.
+Alternatively, a valid image with size 1x1 is rendered.
+
+As an alternate solution, an error message special for this case may be given.
 
 # Specification
 
@@ -84,6 +92,10 @@ The required width is 16 pixels:
 The entier argument must be greater than 0.
 The option may not be specified together with "-scale" and/or "-scaletoheight".
 
+## No error on to small scale
+
+The image size is set to 1x1 if wether width or height is 0 after scaling and rounding.
+
 # Implementation
 
 Implementation is ready in branch tip-545-svg-options.
@@ -91,3 +103,4 @@ Implementation is ready in branch tip-545-svg-options.
 # Copyright
 
 This document has been placed in the public domain.
+
