Add remark on likelyhood of scale zero error

--- a/tip/545.md
+++ b/tip/545.md
@@ -95,6 +95,7 @@ The option may not be specified together with "-scale" and/or "-scaletoheight".
 ## No error on to small scale
 
 The image size is set to 1x1 if wether width or height is 0 after scaling and rounding.
+This is a very rare case, as ceil rounding is used and we must go below the resolution of double to acheve this.
 
 # Implementation
 
